# plugin-interfaces

./: .gitignore  Cargo.toml  README.md  README_zh.md
src/: api.rs  callbacks.rs  config.rs  handler.rs  lib.rs  metadata.rs  symbols.rs
src/message/: mod.rs  plugin_message.rs  stream_message.rs
src/pluginui/: mod.rs  ui.rs
