[package]
name = "plugin-interfaces"
version = "0.1.0"
edition = "2021"
description = "Plugin interfaces for chat-client application"
authors = ["Debin"]
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
