[package]
name = "plugin-interfaces"
version = "0.1.1"
edition = "2024"
description = "Plugin interfaces for chat-client application"
authors = ["Debin <luodeb@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/luodeb/plugin-interfaces.git"
documentation = "https://docs.rs/plugin-interfaces"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
